config("assimp-config") {
  include_dirs = [
    "src/include/",
    "src/code/BoostWorkaround",
  ]
}

static_library("assimp_contrib") {
  sources = [
    "src/contrib/clipper/clipper.cpp",
    "src/contrib/clipper/clipper.hpp",
    "src/contrib/ConvertUTF/ConvertUTF.c",
    "src/contrib/ConvertUTF/ConvertUTF.h",
    "src/contrib/irrXML/CXMLReaderImpl.h",
    "src/contrib/irrXML/heapsort.h",
    "src/contrib/irrXML/irrArray.h",
    "src/contrib/irrXML/irrString.h",
    "src/contrib/irrXML/irrTypes.h",
    "src/contrib/irrXML/irrXML.cpp",
    "src/contrib/irrXML/irrXML.h",
    "src/contrib/poly2tri/poly2tri/common/shapes.cc",
    "src/contrib/poly2tri/poly2tri/common/shapes.h",
    "src/contrib/poly2tri/poly2tri/common/utils.h",
    "src/contrib/poly2tri/poly2tri/poly2tri.h",
    "src/contrib/poly2tri/poly2tri/sweep/advancing_front.cc",
    "src/contrib/poly2tri/poly2tri/sweep/advancing_front.h",
    "src/contrib/poly2tri/poly2tri/sweep/cdt.cc",
    "src/contrib/poly2tri/poly2tri/sweep/cdt.h",
    "src/contrib/poly2tri/poly2tri/sweep/sweep.cc",
    "src/contrib/poly2tri/poly2tri/sweep/sweep.h",
    "src/contrib/poly2tri/poly2tri/sweep/sweep_context.cc",
    "src/contrib/poly2tri/poly2tri/sweep/sweep_context.h",
    "src/contrib/unzip/crypt.h",
    "src/contrib/unzip/ioapi.c",
    "src/contrib/unzip/ioapi.h",
    "src/contrib/unzip/unzip.c",
    "src/contrib/unzip/unzip.h",
    "src/contrib/zlib/adler32.c",
    "src/contrib/zlib/compress.c",
    "src/contrib/zlib/crc32.c",
    "src/contrib/zlib/crc32.h",
    "src/contrib/zlib/deflate.c",
    "src/contrib/zlib/deflate.h",
    "src/contrib/zlib/inffast.c",
    "src/contrib/zlib/inffast.h",
    "src/contrib/zlib/inffixed.h",
    "src/contrib/zlib/inflate.c",
    "src/contrib/zlib/inflate.h",
    "src/contrib/zlib/inftrees.c",
    "src/contrib/zlib/inftrees.h",
    "src/contrib/zlib/trees.c",
    "src/contrib/zlib/trees.h",
    "src/contrib/zlib/zconf.h",
    "src/contrib/zlib/zconf.in.h",
    "src/contrib/zlib/zlib.h",
    "src/contrib/zlib/zutil.c",
    "src/contrib/zlib/zutil.h",
  ]

  direct_dependent_configs = [":assimp-config"]

  include_dirs = [
    "src/contrib/unzip"
  ]
}

static_library("assimp") {
  sources = [
    "src/code/3DSConverter.cpp",
    "src/code/3DSHelper.h",
    "src/code/3DSLoader.cpp",
    "src/code/3DSLoader.h",
    "src/code/ACLoader.cpp",
    "src/code/ACLoader.h",
    "src/code/ASELoader.cpp",
    "src/code/ASELoader.h",
    "src/code/ASEParser.cpp",
    "src/code/ASEParser.h",
    "src/code/assbin_chunks.h",
    "src/code/Assimp.cpp",
    "src/code/AssimpCExport.cpp",
    "src/code/AssimpPCH.cpp",
    "src/code/AssimpPCH.h",
    "src/code/B3DImporter.cpp",
    "src/code/B3DImporter.h",
    "src/code/BaseImporter.cpp",
    "src/code/BaseImporter.h",
    "src/code/BaseProcess.cpp",
    "src/code/BaseProcess.h",
    "src/code/BlenderDNA.cpp",
    "src/code/BlenderDNA.h",
    "src/code/BlenderDNA.inl",
    "src/code/BlenderIntermediate.h",
    "src/code/BlenderLoader.cpp",
    "src/code/BlenderLoader.h",
    "src/code/BlenderModifier.cpp",
    "src/code/BlenderModifier.h",
    "src/code/BlenderScene.cpp",
    "src/code/BlenderScene.h",
    "src/code/BlenderSceneGen.h",
    "src/code/BlobIOSystem.h",
    "src/code/BoostWorkaround",
    "src/code/BoostWorkaround/boost",
    "src/code/BoostWorkaround/boost/foreach.hpp",
    "src/code/BoostWorkaround/boost/format.hpp",
    "src/code/BoostWorkaround/boost/lexical_cast.hpp",
    "src/code/BoostWorkaround/boost/LICENSE_1_0.txt",
    "src/code/BoostWorkaround/boost/make_shared.hpp",
    "src/code/BoostWorkaround/boost/math",
    "src/code/BoostWorkaround/boost/math/common_factor_rt.hpp",
    "src/code/BoostWorkaround/boost/noncopyable.hpp",
    "src/code/BoostWorkaround/boost/pointer_cast.hpp",
    "src/code/BoostWorkaround/boost/scoped_array.hpp",
    "src/code/BoostWorkaround/boost/scoped_ptr.hpp",
    "src/code/BoostWorkaround/boost/shared_array.hpp",
    "src/code/BoostWorkaround/boost/shared_ptr.hpp",
    "src/code/BoostWorkaround/boost/static_assert.hpp",
    "src/code/BoostWorkaround/boost/timer.hpp",
    "src/code/BoostWorkaround/boost/tuple",
    "src/code/BoostWorkaround/boost/tuple/tuple.hpp",
    "src/code/BVHLoader.cpp",
    "src/code/BVHLoader.h",
    "src/code/ByteSwap.h",
    "src/code/CalcTangentsProcess.cpp",
    "src/code/CalcTangentsProcess.h",
    "src/code/CInterfaceIOWrapper.h",
    "src/code/CMakeLists.txt",
    "src/code/COBLoader.cpp",
    "src/code/COBLoader.h",
    "src/code/COBScene.h",
    "src/code/ColladaExporter.cpp",
    "src/code/ColladaExporter.h",
    "src/code/ColladaHelper.h",
    "src/code/ColladaLoader.cpp",
    "src/code/ColladaLoader.h",
    "src/code/ColladaParser.cpp",
    "src/code/ColladaParser.h",
    "src/code/ComputeUVMappingProcess.cpp",
    "src/code/ComputeUVMappingProcess.h",
    "src/code/ConvertToLHProcess.cpp",
    "src/code/ConvertToLHProcess.h",
    "src/code/CSMLoader.cpp",
    "src/code/CSMLoader.h",
    "src/code/DeboneProcess.cpp",
    "src/code/DeboneProcess.h",
    "src/code/DefaultIOStream.cpp",
    "src/code/DefaultIOStream.h",
    "src/code/DefaultIOSystem.cpp",
    "src/code/DefaultIOSystem.h",
    "src/code/DefaultLogger.cpp",
    "src/code/DefaultProgressHandler.h",
    "src/code/DXFHelper.h",
    "src/code/DXFLoader.cpp",
    "src/code/DXFLoader.h",
    "src/code/Exceptional.h",
    "src/code/Exporter.cpp",
    "src/code/fast_atof.h",
    "src/code/FileLogStream.h",
    "src/code/FileSystemFilter.h",
    "src/code/FindDegenerates.cpp",
    "src/code/FindDegenerates.h",
    "src/code/FindInstancesProcess.cpp",
    "src/code/FindInstancesProcess.h",
    "src/code/FindInvalidDataProcess.cpp",
    "src/code/FindInvalidDataProcess.h",
    "src/code/FixNormalsStep.cpp",
    "src/code/FixNormalsStep.h",
    "src/code/GenericProperty.h",
    "src/code/GenFaceNormalsProcess.cpp",
    "src/code/GenFaceNormalsProcess.h",
    "src/code/GenVertexNormalsProcess.cpp",
    "src/code/GenVertexNormalsProcess.h",
    "src/code/HalfLifeFileData.h",
    "src/code/Hash.h",
    "src/code/HMPFileData.h",
    "src/code/HMPLoader.cpp",
    "src/code/HMPLoader.h",
    "src/code/IFCCurve.cpp",
    "src/code/IFCGeometry.cpp",
    "src/code/IFCLoader.cpp",
    "src/code/IFCLoader.h",
    "src/code/IFCMaterial.cpp",
    "src/code/IFCProfile.cpp",
    "src/code/IFCReaderGen.cpp",
    "src/code/IFCReaderGen.h",
    "src/code/IFCUtil.cpp",
    "src/code/IFCUtil.h",
    "src/code/IFF.h",
    "src/code/Importer.cpp",
    "src/code/Importer.h",
    "src/code/ImporterRegistry.cpp",
    "src/code/ImproveCacheLocality.cpp",
    "src/code/ImproveCacheLocality.h",
    "src/code/IRRLoader.cpp",
    "src/code/IRRLoader.h",
    "src/code/IRRMeshLoader.cpp",
    "src/code/IRRMeshLoader.h",
    "src/code/IRRShared.cpp",
    "src/code/IRRShared.h",
    "src/code/irrXMLWrapper.h",
    "src/code/JoinVerticesProcess.cpp",
    "src/code/JoinVerticesProcess.h",
    "src/code/LimitBoneWeightsProcess.cpp",
    "src/code/LimitBoneWeightsProcess.h",
    "src/code/LineSplitter.h",
    "src/code/LogAux.h",
    "src/code/LWOAnimation.cpp",
    "src/code/LWOAnimation.h",
    "src/code/LWOBLoader.cpp",
    "src/code/LWOFileData.h",
    "src/code/LWOLoader.cpp",
    "src/code/LWOLoader.h",
    "src/code/LWOMaterial.cpp",
    "src/code/LWSLoader.cpp",
    "src/code/LWSLoader.h",
    "src/code/M3Importer.cpp",
    "src/code/M3Importer.h",
    "src/code/makefile.mingw",
    "src/code/MakeVerboseFormat.cpp",
    "src/code/MakeVerboseFormat.h",
    "src/code/MaterialSystem.cpp",
    "src/code/MaterialSystem.h",
    "src/code/MD2FileData.h",
    "src/code/MD2Loader.cpp",
    "src/code/MD2Loader.h",
    "src/code/MD2NormalTable.h",
    "src/code/MD3FileData.h",
    "src/code/MD3Loader.cpp",
    "src/code/MD3Loader.h",
    "src/code/MD4FileData.h",
    "src/code/MD5Loader.cpp",
    "src/code/MD5Loader.h",
    "src/code/MD5Parser.cpp",
    "src/code/MD5Parser.h",
    "src/code/MDCFileData.h",
    "src/code/MDCLoader.cpp",
    "src/code/MDCLoader.h",
    "src/code/MDCNormalTable.h",
    "src/code/MDLDefaultColorMap.h",
    "src/code/MDLFileData.h",
    "src/code/MDLLoader.cpp",
    "src/code/MDLLoader.h",
    "src/code/MDLMaterialLoader.cpp",
    "src/code/MemoryIOWrapper.h",
    "src/code/MS3DLoader.cpp",
    "src/code/MS3DLoader.h",
    "src/code/NDOLoader.cpp",
    "src/code/NDOLoader.h",
    "src/code/NFFLoader.cpp",
    "src/code/NFFLoader.h",
    "src/code/ObjExporter.cpp",
    "src/code/ObjExporter.h",
    "src/code/ObjFileData.h",
    "src/code/ObjFileImporter.cpp",
    "src/code/ObjFileImporter.h",
    "src/code/ObjFileMtlImporter.cpp",
    "src/code/ObjFileMtlImporter.h",
    "src/code/ObjFileParser.cpp",
    "src/code/ObjFileParser.h",
    "src/code/ObjTools.h",
    "src/code/OFFLoader.cpp",
    "src/code/OFFLoader.h",
    "src/code/OgreImporter.cpp",
    "src/code/OgreImporter.hpp",
    "src/code/OgreMaterial.cpp",
    "src/code/OgreMesh.cpp",
    "src/code/OgreSkeleton.cpp",
    "src/code/OgreXmlHelper.hpp",
    "src/code/OptimizeGraph.cpp",
    "src/code/OptimizeGraph.h",
    "src/code/OptimizeMeshes.cpp",
    "src/code/OptimizeMeshes.h",
    "src/code/ParsingUtils.h",
    "src/code/PlyExporter.cpp",
    "src/code/PlyExporter.h",
    "src/code/PlyLoader.cpp",
    "src/code/PlyLoader.h",
    "src/code/PlyParser.cpp",
    "src/code/PlyParser.h",
    "src/code/PolyTools.h",
    "src/code/PostStepRegistry.cpp",
    "src/code/PretransformVertices.cpp",
    "src/code/PretransformVertices.h",
    "src/code/ProcessHelper.cpp",
    "src/code/ProcessHelper.h",
    "src/code/Profiler.h",
    "src/code/pstdint.h",
    "src/code/Q3BSPFileData.h",
    "src/code/Q3BSPFileImporter.cpp",
    "src/code/Q3BSPFileImporter.h",
    "src/code/Q3BSPFileParser.cpp",
    "src/code/Q3BSPFileParser.h",
    "src/code/Q3BSPZipArchive.cpp",
    "src/code/Q3BSPZipArchive.h",
    "src/code/Q3DLoader.cpp",
    "src/code/Q3DLoader.h",
    "src/code/qnan.h",
    "src/code/RawLoader.cpp",
    "src/code/RawLoader.h",
    "src/code/RemoveComments.cpp",
    "src/code/RemoveComments.h",
    "src/code/RemoveRedundantMaterials.cpp",
    "src/code/RemoveRedundantMaterials.h",
    "src/code/RemoveVCProcess.cpp",
    "src/code/RemoveVCProcess.h",
    "src/code/res",
    "src/code/res/assimp.rc",
    "src/code/res/resource.h",
    "src/code/SceneCombiner.cpp",
    "src/code/SceneCombiner.h",
    "src/code/ScenePreprocessor.cpp",
    "src/code/ScenePreprocessor.h",
    "src/code/ScenePrivate.h",
    "src/code/SGSpatialSort.cpp",
    "src/code/SGSpatialSort.h",
    "src/code/SkeletonMeshBuilder.cpp",
    "src/code/SkeletonMeshBuilder.h",
    "src/code/SMDLoader.cpp",
    "src/code/SMDLoader.h",
    "src/code/SmoothingGroups.h",
    "src/code/SmoothingGroups.inl",
    "src/code/SortByPTypeProcess.cpp",
    "src/code/SortByPTypeProcess.h",
    "src/code/SpatialSort.cpp",
    "src/code/SpatialSort.h",
    "src/code/SplitByBoneCountProcess.cpp",
    "src/code/SplitByBoneCountProcess.h",
    "src/code/SplitLargeMeshes.cpp",
    "src/code/SplitLargeMeshes.h",
    "src/code/StandardShapes.cpp",
    "src/code/StandardShapes.h",
    "src/code/StdOStreamLogStream.h",
    "src/code/STEPFile.h",
    "src/code/STEPFileReader.cpp",
    "src/code/STEPFileReader.h",
    "src/code/STLExporter.cpp",
    "src/code/STLExporter.h",
    "src/code/STLLoader.cpp",
    "src/code/STLLoader.h",
    "src/code/StreamReader.h",
    "src/code/StringComparison.h",
    "src/code/Subdivision.cpp",
    "src/code/Subdivision.h",
    "src/code/TargetAnimation.cpp",
    "src/code/TargetAnimation.h",
    "src/code/TerragenLoader.cpp",
    "src/code/TerragenLoader.h",
    "src/code/TextureTransform.cpp",
    "src/code/TextureTransform.h",
    "src/code/TinyFormatter.h",
    "src/code/TriangulateProcess.cpp",
    "src/code/TriangulateProcess.h",
    "src/code/UnrealLoader.cpp",
    "src/code/UnrealLoader.h",
    "src/code/ValidateDataStructure.cpp",
    "src/code/ValidateDataStructure.h",
    "src/code/Vertex.h",
    "src/code/VertexTriangleAdjacency.cpp",
    "src/code/VertexTriangleAdjacency.h",
    "src/code/Win32DebugLogStream.h",
    "src/code/XFileHelper.h",
    "src/code/XFileImporter.cpp",
    "src/code/XFileImporter.h",
    "src/code/XFileParser.cpp",
    "src/code/XFileParser.h",
    "src/code/XGLLoader.cpp",
    "src/code/XGLLoader.h",
  ]

  deps = [":assimp_contrib"]
  forward_dependent_configs_from = deps
}

executable("assimp_view") {
  sources = [
    "src/tools/assimp_view/AnimEvaluator.cpp",
    "src/tools/assimp_view/AnimEvaluator.h",
    "src/tools/assimp_view/AssetHelper.h",
    "src/tools/assimp_view/assimp_view.cpp",
    "src/tools/assimp_view/assimp_view.h",
    "src/tools/assimp_view/assimp_view.rc",
    "src/tools/assimp_view/Background.cpp",
    "src/tools/assimp_view/Background.h",
    "src/tools/assimp_view/Camera.h",
    "src/tools/assimp_view/Display.cpp",
    "src/tools/assimp_view/Display.h",
    "src/tools/assimp_view/HelpDialog.cpp",
    "src/tools/assimp_view/Input.cpp",
    "src/tools/assimp_view/LogDisplay.cpp",
    "src/tools/assimp_view/LogDisplay.h",
    "src/tools/assimp_view/LogWindow.cpp",
    "src/tools/assimp_view/LogWindow.h",
    "src/tools/assimp_view/Material.cpp",
    "src/tools/assimp_view/MaterialManager.h",
    "src/tools/assimp_view/MeshRenderer.cpp",
    "src/tools/assimp_view/MeshRenderer.h",
    "src/tools/assimp_view/MessageProc.cpp",
    "src/tools/assimp_view/Normals.cpp",
    "src/tools/assimp_view/RenderOptions.h",
    "src/tools/assimp_view/resource.h",
    "src/tools/assimp_view/SceneAnimator.cpp",
    "src/tools/assimp_view/SceneAnimator.h",
    "src/tools/assimp_view/Shaders.cpp",
    "src/tools/assimp_view/Shaders.h",
    "src/tools/assimp_view/stdafx.cpp",
    "src/tools/assimp_view/stdafx.h",
  ]

  deps = [":assimp"]
  include_dirs = ["src/code"]
  configs -= ["//build/config/win:unicode" ]
  configs += ["//build/config/win:d3d9"]
  configs += ["//build/config/win:windowed"]
  libs = [ "comctl32.lib"]
}

executable("assimpcmd") {
  sources = [
    "src/tools/assimp_cmd/assimp_cmd.rc",
    "src/tools/assimp_cmd/CompareDump.cpp",
    "src/tools/assimp_cmd/Export.cpp",
    "src/tools/assimp_cmd/generic_inserter.hpp",
    "src/tools/assimp_cmd/ImageExtractor.cpp",
    "src/tools/assimp_cmd/Info.cpp",
    "src/tools/assimp_cmd/Main.cpp",
    "src/tools/assimp_cmd/Main.h",
    "src/tools/assimp_cmd/resource.h",
    "src/tools/assimp_cmd/WriteDumb.cpp",
  ]
  deps = [":assimp"]
}